# qCrosshair

./: CMakeLists.txt  QDot.pro  README.md  crosshair.h  dots.h  dots.qrc  icon.qrc  main.cpp  qdot.cpp  qdot.h
src/: crosshair.cpp  crosshair.h  dots.h  qdot.cpp  qdot.h  qdot.ui
